Correcting overflow issue on .header-btn.

--- a/assets/scss/elements/_header.scss
+++ b/assets/scss/elements/_header.scss
@@ -108,6 +108,7 @@ header .rts-btn {
             .header-btn {
               padding: 6px 15px;
               color: white;
+              overflow: hidden;
               svg {
                 path {
                   stroke: white;
